--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -2,3 +2,24 @@ body {
     margin: 0;
     padding: 0;
 }
+
+nav {
+    width: 100%;
+    height: 70px; /* moet nog dynamisch */
+}
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+nav li {
+
+}
+
+nav a {
+    text-decoration: none;
+    color: black; /*wat we willen */
+}
