--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -1,25 +1,50 @@
+/* Variabelen */
+
+:root{
+    --primary-color: #C98628;
+    --secondary-color: #795246;
+    --tertiary-color: #ECE0DC;
+}
+
+/* Styling */
+
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
+}
+
+header {
+    background-color: var(--primary-color);
+    display: flex;
+    flex-direction: row;
 }
 
 nav {
     width: 100%;
     height: 70px; /* moet nog dynamisch */
 }
-nav ul {
-    list-style-type: none;
-    padding: 0;
+
+nav ul, nav li, nav a {
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+
 }
 
 nav li {
 
+    width: 100%;
 }
 
 nav a {
     text-decoration: none;
-    color: black; /*wat we willen */
+    color: white; /*wat we willen */
 }
