--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -6,6 +6,21 @@
     --tertiary-color: #ECE0DC;
 }
 
+body {
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+main {
+    padding: 10px;
+    overflow: hidden;
+}
+
 .logo {
     max-width: 100%;
+}
+
+.banner {
+    display: none;
 }
