--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -12,7 +12,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-main {
+article {
     padding: 10px;
     overflow: hidden;
 }
@@ -23,4 +23,11 @@ main {
 
 .banner {
     display: none;
+}
+
+@media screen and (min-width: 800px){
+    .banner {
+        display: block;
+        width: 100%;
+    }
 }
