--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -1,10 +1,40 @@
-/* Variabelen */
+/*
+
+Index
+-----------------------------------------------------------
+1. Mobile
+    1.1 Global styles (variables/constants)
+    1.2 Homepage styles
+    1.3 Summary styles
+    1.4 Ratings styles
+    1.5 Cast styles
+    1.6 Contact styles
+-----------------------------------------------------------
+2. Desktop
+    2.1 Global styles
+    2.2 Homepage styles
+    2.3 Summary styles
+    2.4 Ratings styles
+    2.5 Cast styles
+    2.6 Contact styles
+
+*/
+
+
+/*-------------------- 1. Mobile --------------------*/
+
+
+/*-------------------- 1.1 Global styles (variables/constants) --------------------*/
+
+/* Vars */
 
 :root{
     --primary-color: #C98628;
     --secondary-color: #795246;
     --tertiary-color: #ECE0DC;
 }
+
+/* Global styles */
 
 body {
     padding: 0;
@@ -21,13 +51,38 @@ article {
     max-width: 100%;
 }
 
+/*-------------------- 1.2 Homepage styles --------------------*/
+
 .banner {
     display: none;
 }
 
+/*-------------------- 1.3 Homepage styles --------------------*/
+
+/*-------------------- 1.4 Summary styles --------------------*/
+
+/*-------------------- 1.5 Cast styles --------------------*/
+
+/*-------------------- 1.6 Contact styles --------------------*/
+
+/*-------------------- 2. Desktop --------------------*/
+
 @media screen and (min-width: 800px){
+    /*-------------------- 2.1 Global styles --------------------*/
+
+    /*-------------------- 2.2 Homepage styles --------------------*/
+
     .banner {
         display: block;
         width: 100%;
     }
+
+    /*-------------------- 2.3 Homepage styles --------------------*/
+
+    /*-------------------- 2.4 Summary styles --------------------*/
+
+    /*-------------------- 2.5 Cast styles --------------------*/
+
+    /*-------------------- 2.6 Contact styles --------------------*/
+
 }
