--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -47,13 +47,13 @@ article {
     overflow: hidden;
 }
 
-.logo {
+.logo-container__logo {
     max-width: 100%;
 }
 
 /*-------------------- 1.2 Homepage styles --------------------*/
 
-.banner {
+.banner-container__banner {
     display: none;
 }
 
@@ -72,7 +72,7 @@ article {
 
     /*-------------------- 2.2 Homepage styles --------------------*/
 
-    .banner {
+    .banner-container__banner {
         display: block;
         width: 100%;
     }
