--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -42,6 +42,22 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+main {
+    background-color: var(--primary-color);
+}
+
+.section {
+    margin: 30px 5px;
+    padding: 10px;
+    background-color: rgba(200, 200, 200, 0.9);
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.section__paragraph {
+    line-height: 1.5rem;
+}
+
 article {
     padding: 10px;
     overflow: hidden;
@@ -55,6 +71,30 @@ article {
 
 .banner-container__banner {
     display: none;
+}
+
+
+
+/* navbar styles */
+
+.navbar {
+    width: 100%;
+}
+
+.navbar__list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.navbar__item {
+    border-bottom: 1px solid var(--primary-color);
+}
+
+.navbar__link {
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+    display: block;
 }
 
 /*-------------------- 1.3 Homepage styles --------------------*/
