--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -49,7 +49,7 @@ body {
 }
 
 .section {
-    padding: 20px 5px;
+    padding: 20px 4vw;
     background-color: #F1F2F3;
 }
 
@@ -60,7 +60,7 @@ body {
 }
 
 .section__paragraph {
-    line-height: 1.5rem;
+    line-height: 1.8rem;
     color: #555;
 }
 
@@ -142,10 +142,11 @@ body {
     height: 30vh;
     width: 100%;
     margin: 0;
+    overflow: hidden;
 }
 
 .banner-container__banner {
-    height: 100%;
+    width: 100%;
 }
 
 
