--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -26,14 +26,17 @@ Index
 
 /*-------------------- 1.1 Global styles (variables/constants) --------------------*/
 /* import some google fonts*/
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis&family=Roboto&display=swap');
 
-/* Vars */
+/* Vars en fonts */
 
 :root{
     --primary-color: #c97800;
     --secondary-color: #795246;
     --tertiary-color: #ECE0DC;
+
+    /*font-family: 'Open Sans', sans-serif;*/
+    font-family: 'Dosis', helvetica, sans-serif;
 }
 
 /* Global styles */
@@ -41,7 +44,6 @@ Index
 body {
     padding: 0;
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
 }
 
 .content {
@@ -57,6 +59,7 @@ body {
     font-size: 2rem;
     letter-spacing: 1.6;
     color: var(--primary-color);
+    font-family: 'Roboto', helvetica, sans-serif;
 }
 
 .section__paragraph {
@@ -119,18 +122,19 @@ body {
 
 .navbar__link {
     text-decoration: none;
-    color: #EEE;
+    color: #E0E0E0;
     padding: 1px 1px;
     display: block;
     font-weight: bold;
+    font-family: 'Roboto', helvetica, sans-serif;
 }
 
 /*-------------------- 1.2 Homepage styles --------------------*/
 
 .title-homepage {
     text-transform: uppercase;
-    letter-spacing: 1.5;
-    font-size: 3rem;
+    letter-spacing: 1.9;
+    font-size: 3.5rem;
     text-align: center;
     position: absolute;
     top: 20vh;
