--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -164,6 +164,32 @@ body {
 
 /*-------------------- 1.5 Cast styles --------------------*/
 
+.cast__element {
+  display: inline-block; 
+  vertical-align: top; 
+  padding: 20px; 
+  box-sizing: border-box; 
+}
+
+.cast__element__img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.cast__element__acting-career{
+    font-size: 18;
+}
+.cast__element__in-martian{
+    font-size: 18;
+}
+
+.cast__element__title{
+    text-align: center;
+    font-size: 40;
+}
+
 /*-------------------- 1.6 Contact styles --------------------*/
 
 /*-------------------- 2. Desktop --------------------*/
