--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 .section {
-    padding: 20px 4vw;
+    padding: 0.5rem 4vw;
     background-color: #F1F2F3;
 }
 
@@ -129,9 +129,32 @@ body {
     font-family: 'Roboto', helvetica, sans-serif;
 }
 
+.button {
+    padding: 0.5rem 20px;
+    font-size: 18px;
+    border: 0;
+    border-radius: 5%;
+    font-family: 'Roboto', helvetica, sans-serif;
+}
+
+a.button {
+    display: block;
+    text-decoration: none;
+}
+
+.button--orange {
+  color: white;
+  background-color: var(--primary-color);
+}
+
+.button--orange:hover {
+background-color: var(--secondary-color);
+cursor: pointer;
+}
+
 /*-------------------- 1.2 Homepage styles --------------------*/
 
-.title-homepage {
+.title {
     text-transform: uppercase;
     letter-spacing: 1.9;
     font-size: 3.5rem;
@@ -139,19 +162,22 @@ body {
     position: absolute;
     top: 20vh;
     width:100%;
+}
+
+.title--white {
     color: white;
 }
 
 
 
-.banner-container {
+.banner {
     height: 30vh;
     width: 100%;
     margin: 0;
     overflow: hidden;
 }
 
-.banner-container__banner {
+.banner__img {
     width: 100%;
 }
 
@@ -189,44 +215,30 @@ body {
     clip-path: circle();
 }
 
-.section__block-quote{
-    align-items: center;
+
+
+.reviews__review {
     display: flex;
     flex-flow: column;
-    padding-bottom: 5px;
-    border: 1px black;
-    border-style: solid;
-    border-radius: 10%;
+    align-items: center;
+
+    padding: 1rem;
+    background: white;
+    border: 1px solid #ccc;
 }
 
-
-
-
-.section__quote{
+.reviews__quote{
     font-style: italic;
 }
-.section__button-block{
+
+
+.streams__buttons {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
     padding: 2rem 0;
 }
-
-.section__button {
-    padding: 12px 20px;
-    font-size: 18px;
-    color: white;
-    background-color: var(--primary-color);
-    border: 0;
-    border-radius: 5%;
-    font-family: 'Roboto', helvetica, sans-serif;
-  }
-
-  .section__button:hover {
-    background-color: var(--secondary-color);
-    cursor: pointer;
-  }
 
 .movie-links__block {
     display: flex;
@@ -288,7 +300,7 @@ margin-right: 10px;
 
     /*-------------------- 2.2 Homepage styles --------------------*/
 
-    .banner-container__banner {
+    .banner__banner {
         display: block;
         width: 100%;
     }
