--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -48,11 +48,11 @@ body {
 
 .content {
     margin-top: 15vh;
+    background-color: #F1F2F3;
 }
 
 .section {
     padding: 0.5rem 4vw;
-    background-color: #F1F2F3;
 }
 
 .section--dark {
@@ -173,7 +173,7 @@ cursor: pointer;
     font-size: 3.5rem;
     text-align: center;
     position: absolute;
-    top: 20vh;
+    top: 5rem;
     width:100%;
 }
 
@@ -229,8 +229,6 @@ cursor: pointer;
     max-height: 20rem;
     clip-path: circle();
 }
-
-
 
 .reviews__review {
     display: flex;
@@ -309,11 +307,69 @@ margin-right: 10px;
     /*-------------------- 2.1 Global styles --------------------*/
 
     /*-------------------- 2.2 Homepage styles --------------------*/
+    .page-header {
+        flex-direction: row;
+        height: 8vh;
+    }
+
+    .navbar {
+        width: 70%;
+    }
+
+    .content {
+        margin-top: 8vh;
+    }
 
     .banner__banner {
         display: block;
         width: 100%;
     }
+
+    article {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .introduction {
+        order: 1;
+        width: 50%;
+    }
+
+    .streams {
+        order: 2;
+        width: 30%;
+    }
+
+    .cast {
+        order: 3;
+        width: 50%;
+    }
+
+    .cast__list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 1em;
+    }
+
+    .cast__member {
+        max-width: 40%;
+    }
+
+    .streams__buttons {
+        flex-direction: column;
+        gap: .5rem;
+    }
+
+    .reviews {
+        order: 5;
+        width: 30%;
+    }
+
+    .movie-info {
+        order: 6;
+    }
+
 
     /*-------------------- 2.3 Homepage styles --------------------*/
 
