--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -196,9 +196,6 @@ cursor: pointer;
     width: 100%;
 }
 
-
-
-
 .cast__list {
     padding: 0px;
     display: flex;
@@ -266,13 +263,12 @@ margin-right: 10px;
 .movie-links__img{
     width: 100%;
     height: 100%;
+    filter: invert(1);
 }
 
 
 
 /*-------------------- 1.3 Summary styles --------------------*/
-.summary-content{
-}
 
 .summary-section__img{
     width: 100%;
@@ -323,6 +319,48 @@ margin-right: 10px;
 }
 
 /*-------------------- 1.6 Contact styles --------------------*/
+
+.contact-form {
+    max-width: 600px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    padding: 20px;
+    background-color: white;
+  }
+  
+.contact-form__label {
+    margin-bottom: 10px;
+    font-weight: bold;
+    }
+
+.contact-form__input {
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    }
+
+.form-button {
+    padding: 10px 20px;
+    background-color: var(--primary-color);
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    }
+
+.form-button:hover {
+    background-color: var(--secondary-color);
+    }
+
+.section.adress-block {
+    padding: 20px;
+    text-align: center;
+    }
 
 /*-------------------- 2. Desktop --------------------*/
 
