--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -66,7 +66,7 @@ body {
 
 .section__title {
     font-size: 2rem;
-    letter-spacing: 1.6;
+    letter-spacing: 0.2rem;
     color: var(--primary-color);
     font-family: 'Roboto', helvetica, sans-serif;
 }
@@ -169,7 +169,7 @@ cursor: pointer;
 
 .title {
     text-transform: uppercase;
-    letter-spacing: 1.9;  /*hier nog een unit achter */
+    letter-spacing: 1.9rem;
     font-size: 3.5rem;
     text-align: center;
     position: absolute;
@@ -225,7 +225,7 @@ cursor: pointer;
 .cast__img{
     max-height: 20rem;
     max-width: 100%;
-    clip-path: circle();
+    clip-path: circle(40%);
 }
 
 .reviews__review {
