--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -316,7 +316,7 @@ margin-right: 10px;
     padding: 20px;
     background-color: white;
   }
-  
+
 .contact-form__label {
     margin-bottom: 10px;
     font-weight: bold;
@@ -347,6 +347,41 @@ margin-right: 10px;
     text-align: center;
     }
 
+
+
+
+.artist {
+    width: 100vw;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 20px;
+}
+
+.artist:nth-child(2n + 1) {
+    color: #EEE;
+    background: #222;
+
+}
+
+.artist__name {
+    width: 100%;
+}
+
+.artist__figure {
+    width: 100%;
+    height: 40vh;
+    overflow: hidden;
+}
+
+.artist__img {
+    height: 100%;
+}
+
+.artist__h3 {
+    width: 10%;
+}
+
+
 /*-------------------- 2. Desktop --------------------*/
 
 @media screen and (min-width: 800px){
@@ -354,13 +389,13 @@ margin-right: 10px;
     .movie-links {
         text-align: center;
       }
-      
+
       .movie-links__block {
         display: flex;
         flex-direction: row;
         justify-content: center;
       }
-      
+
       .movie-links__link {
         display: flex;
         align-items: center;
@@ -449,7 +484,7 @@ margin-right: 10px;
     /*-------------------- 2.4 Ratings styles --------------------*/
     .table-ratings{
         width: 50rem;
-        
+
     }
 
     /*-------------------- 2.5 Cast styles --------------------*/
