--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -351,35 +351,27 @@ margin-right: 10px;
 
 
 .artist {
-    width: 100vw;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 35% auto;
     padding: 20px;
 }
 
-.artist:nth-child(2n + 1) {
-    color: #EEE;
-    background: #222;
-
-}
-
-.artist__name {
-    width: 100%;
-}
-
 .artist__figure {
-    width: 100%;
-    height: 40vh;
+    grid-row-start: 2;
+    grid-column-start: 1;
     overflow: hidden;
 }
 
 .artist__img {
-    height: 100%;
+    max-width: 100%;
 }
 
-.artist__h3 {
-    width: 10%;
+.artist__wrapper {
+    grid-column-start: 2;
+    grid-row-start: 2;
 }
+
 
 
 /*-------------------- 2. Desktop --------------------*/
