--- a/Assignment1/styles/style.css
+++ b/Assignment1/styles/style.css
@@ -351,26 +351,30 @@ margin-right: 10px;
 
 
 .artist {
-    display: grid;
-    grid-template-rows: auto auto;
-    grid-template-columns: 35% auto;
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 1em;
+    grid-template-columns: 1fr;
+
+    width: 100%;
 }
 
 .artist__figure {
-    grid-row-start: 2;
-    grid-column-start: 1;
     overflow: hidden;
+}
+
+.artist__header {
+    font-size: 2.5rem;
+
+    color: var(--primary-color);
 }
 
 .artist__img {
     max-width: 100%;
 }
 
-.artist__wrapper {
-    grid-column-start: 2;
-    grid-row-start: 2;
-}
+
 
 .tooltip {
     position: absolute;
@@ -382,6 +386,8 @@ margin-right: 10px;
     flex-direction: column;
     padding: 1em;
 }
+
+
 
 
 
